исправил вход, исправил карточку места, добавил отзывы

--- a/src/app/components/login-page/login-page.component.html
+++ b/src/app/components/login-page/login-page.component.html
@@ -1,5 +1,5 @@
 <div class="header-container">
-  <!-- <div class="logo-img1"></div> -->
+  <div class="logo-img1"></div>
   <a routerLink='/main'>WorkPoint</a>
 </div>
 
@@ -8,6 +8,7 @@
     <span>Добро пожаловать на</span>
     <br>
     <!-- <img src="assets/img/W-logo.svg" class="logo-img2"> -->
+    <div class="logo-img2"></div>
     <a class="title">WorkPoint</a>
   </div>
 
