--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -9,8 +9,9 @@
   </div>
 
   <div class="header-right-side">
-    <button type="button" class="btn-add-coworking" (click)="navigateWithDelay('/main/add')">Добавить
-      место</button>
+    <button type="button" class="btn-add-coworking" (click)="navigateWithDelay('/main/add')">
+      Добавить место
+    </button>
 
     <!-- <button type="button" class="btn-notification">
       <img src="assets/img/notification.svg" alt="notification" class="btn-notification-img">
@@ -23,12 +24,12 @@
 
     <div class="dropdown">
 
-      <p class="profile-name" *ngIf="user">{{user.name + ' ' + user.surname}}</p>
-      <button class="profile-name" *ngIf="!user" routerLink="/registration">Зарегистрироваться</button>
+      <div class="name">
+        <p class="profile-name" *ngIf="user">{{user.name + ' ' + user.surname}}</p>
+        <button class="profile-name sign-in" *ngIf="!user" routerLink="/login">Вход</button>
+      </div>
 
-      <div class="dropdown-menu" [ngClass]="{
-      'show': ifClicked
-    }">
+      <div class="dropdown-menu" [ngClass]="{'show': ifClicked}">
         <a routerLink="/favourites" class="dropdown-link">Избранное</a>
         <a routerLink="/profile" class="dropdown-link">Настройки профиля</a>
         <a routerLink="/place-settings" class="dropdown-link">Настройки мест</a>
@@ -39,7 +40,7 @@
       </div>
     </div>
 
-    <div>
+    <div *ngIf="user">
       <button class="btn-settings" (click)="ifClicked = !ifClicked">
         <img src="assets/img/settings.svg" alt="settings" class="btn-settings-img">
       </button>
